--- a/packages/docs/pages/lib/js.mdx
+++ b/packages/docs/pages/lib/js.mdx
@@ -178,7 +178,149 @@ The `evalFeature` method returns a `FeatureResult` object with more info about w
 - **experiment** - Information about the experiment (if any) which was used to assign the value to the user
 - **experimentResult** - The result of the experiment (if any) which was used to assign the value to the user
 
-## Feature Definitions
+## Hiding Features from Users
+
+If you fetch the list of features from a client-side app, any of your users could inspect the network request and see which features and experiments you are running. In most cases, this is not a big deal, but if you did want to prevent that, you have two options:
+
+1. Evaluate feature flags using a server-side SDK and only pass the result to the browser
+2. Enable encryption for your SDK Endpoint
+
+If you enable encryption for an SDK Endpoint, instead of returning features as human-readable JSON, we will return it as an encrypted string that must be decrypted before being passed into the SDK.
+
+With encryption enabled, the response from the SDK Endpoint will be in the format:
+
+```js
+  {
+    status: 200,
+    encryptedFeatures: "abcdef123456GHIJKL0987654321..."
+  }
+```
+
+The features are encrypted using the AES-CBC algorithm. You can find your encryption key on the **Features -> Environments** page in GrowthBook.
+
+Here's an example of decrypting features using the SubtleCrypto api, which is built into all modern browsers:
+
+```ts
+// Helper function to decrypt using SubtleCrypto
+async function decrypt(encryptedText) {
+  const GB_ENCRYPTION_KEY = "MY_ENCRYPTION_KEY"; // <-- Set your encryption key here
+  const base64ToBuf = (b) => Uint8Array.from(atob(b), (c) => c.charCodeAt(0));
+  const key = await window.crypto.subtle.importKey(
+    "raw", base64ToBuf(GB_ENCRYPTION_KEY),
+    { name: "AES-CBC", length: 128 }, true, ["encrypt", "decrypt"]
+  );
+  const [iv, cipherText] = encryptedText.split(".");
+  const plainTextBuffer = await window.crypto.subtle
+    .decrypt({name: "AES-CBC", iv: base64ToBuf(iv)}, key, base64ToBuf(cipherText));
+  return new TextDecoder().decode(plainTextBuffer);
+}
+
+// Load features from the encrypted SDK Endpoint and decrypt them
+fetch("https://cdn.growthbook.io/api/features/<your api key>")
+  .then((res) => res.json())
+  .then((json) => decrypt(json.encryptedFeatures))
+  .then((featuresStr) => growthbook.setFeatures(JSON.parse(featuresStr)))
+  .catch((e) => console.log("Failed to set GrowthBook feature definitions", e));
+```
+
+## Inline Experiments
+
+Instead of declaring all features up-front in the context and referencing them by ids in your code, you can also just run an experiment directly. This is done with the `growthbook.run` method:
+
+```js
+const { value } = growthbook.run({
+  key: "my-experiment",
+  variations: ["red", "blue", "green"],
+});
+```
+
+All of the other settings (`weights`, `hashAttribute`, `coverage`, `namespace`, `condition`) are supported when using inline experiments.
+
+In addition, there are a few other settings that only really make sense for inline experiments:
+
+- `force` can be set to one of the variation array indexes. Everyone will be immediately assigned the specified value.
+- `active` can be set to false to disable the experiment and return the control for everyone
+
+### Inline Experiment Return Value
+
+A call to `growthbook.run(experiment)` returns an object with a few useful properties:
+
+```ts
+const {
+  inExperiment,
+  hashUsed,
+  variationId,
+  value,
+  hashAttribute,
+  hashValue,
+} = growthbook.run({
+  key: "my-experiment",
+  variations: ["A", "B"],
+});
+
+// If user is included in the experiment
+console.log(inExperiment); // true or false
+
+// The index of the assigned variation
+console.log(variationId); // 0 or 1
+
+// The value of the assigned variation
+console.log(value); // "A" or "B"
+
+// If the variation was randomly assigned by hashing
+console.log(hashUsed);
+
+// The user attribute that was hashed
+console.log(hashAttribute); // "id"
+
+// The value of that attribute
+console.log(hashValue); // e.g. "123"
+```
+
+The `inExperiment` flag will be false if the user was excluded from being part of the experiment for any reason (e.g. failed targeting conditions).
+
+The `hashUsed` flag will only be true if the user was randomly assigned a variation. If the user was forced into a specific variation instead, this flag will be false.
+
+## Typescript
+
+When using `getFeatureValue`, the type of the feature is inferred from the fallback value you provide.
+
+```ts
+// color will be type "string"
+const color = growthbook.getFeatureValue("button-color", "blue");
+```
+
+When using `evalFeature`, the value has type `any` by default, but you can specify a more restrictive type:
+
+```ts
+// result.value will be type "number" now
+const result = growthbook.evalFeature<number>("button-size");
+```
+
+When using inline experiments, the returned value is inferred from the variations you pass in:
+
+```ts
+// result.value will be type "string"
+const result = growthbook.run({
+  key: "my-test",
+  variations: ["blue", "green"],
+});
+```
+
+There are a number of types you can import as well if needed:
+
+```ts
+import type {
+  Context,
+  ConditionInterface,
+  Experiment,
+  FeatureDefinition,
+  FeatureResult,
+  ExperimentResult,
+} from "@growthbook/growthbook";
+```
+
+## Feature Definitions (reference)
 
 The feature definition JSON file contains information about all of the features in your application.
 
@@ -457,94 +599,3 @@ We do this using deterministic hashing to assign users a value between 0 and 1 f
 ```
 
 **Note** - If a user is excluded from an experiment due to the namespace range, the rule will be skipped and the next matching rule will be used instead.
-
-## Inline Experiments
-
-Instead of declaring all features up-front in the context and referencing them by ids in your code, you can also just run an experiment directly. This is done with the `growthbook.run` method:
-
-```js
-const { value } = growthbook.run({
-  key: "my-experiment",
-  variations: ["red", "blue", "green"],
-});
-```
-
-All of the other settings (`weights`, `hashAttribute`, `coverage`, `namespace`, `condition`) are supported when using inline experiments.
-
-In addition, there are a few other settings that only really make sense for inline experiments:
-
-- `force` can be set to one of the variation array indexes. Everyone will be immediately assigned the specified value.
-- `active` can be set to false to disable the experiment and return the control for everyone
-
-### Inline Experiment Return Value
-
-A call to `growthbook.run(experiment)` returns an object with a few useful properties:
-
-```ts
-const { inExperiment, hashUsed, variationId, value, hashAttribute, hashValue } =
-  growthbook.run({
-    key: "my-experiment",
-    variations: ["A", "B"],
-  });
-
-// If user is included in the experiment
-console.log(inExperiment); // true or false
-
-// The index of the assigned variation
-console.log(variationId); // 0 or 1
-
-// The value of the assigned variation
-console.log(value); // "A" or "B"
-
-// If the variation was randomly assigned by hashing
-console.log(hashUsed);
-
-// The user attribute that was hashed
-console.log(hashAttribute); // "id"
-
-// The value of that attribute
-console.log(hashValue); // e.g. "123"
-```
-
-The `inExperiment` flag will be false if the user was excluded from being part of the experiment for any reason (e.g. failed targeting conditions).
-
-The `hashUsed` flag will only be true if the user was randomly assigned a variation. If the user was forced into a specific variation instead, this flag will be false.
-
-## Typescript
-
-When using `getFeatureValue`, the type of the feature is inferred from the fallback value you provide.
-
-```ts
-// color will be type "string"
-const color = growthbook.getFeatureValue("button-color", "blue");
-```
-
-When using `evalFeature`, the value has type `any` by default, but you can specify a more restrictive type:
-
-```ts
-// result.value will be type "number" now
-const result = growthbook.evalFeature<number>("button-size");
-```
-
-When using inline experiments, the returned value is inferred from the variations you pass in:
-
-```ts
-// result.value will be type "string"
-const result = growthbook.run({
-  key: "my-test",
-  variations: ["blue", "green"],
-});
-```
-
-There are a number of types you can import as well if needed:
-
-```ts
-import type {
-  Context,
-  ConditionInterface,
-  Experiment,
-  FeatureDefinition,
-  FeatureResult,
-  ExperimentResult,
-} from "@growthbook/growthbook";
-```
