--- a/packages/docs/pages/self-host/env.mdx
+++ b/packages/docs/pages/self-host/env.mdx
@@ -122,7 +122,7 @@ Store uploads in a Google Cloud Storage bucket.
 
 ## Enterprise Settings
 
-Some features in self-hosted GrowthBook are only available with an Enterprise license key. Reach out to [sales@growthbook.io](mailto:sales@growthbook.io) to learn more.
+Some features in self-hosted GrowthBook are only available with a commercial license key. Reach out to [sales@growthbook.io](mailto:sales@growthbook.io) to learn more.
 
 - **LICENSE_KEY** - Your signed license key provided by the GrowthBook team
 - **SSO_CONFIG** - A JSON-encoded string that configures SSO (using OpenID Connect). It should be an object with the following keys:
