Removing some files that are still around from the encryption PR.

--- a/packages/docs/pages/lib/react.mdx
+++ b/packages/docs/pages/lib/react.mdx
@@ -213,90 +213,7 @@ The `result` argument is the same thing returned from the `useFeature` hook.
 
 Note: If you evaluate the same feature multiple times (and the value doesn't change), the callback will only be fired the first time.
 
-### Encrypting SDK Endpoints
-
-When creating an SDK endpoint, you have the option to enable encryption. When enabled, GrowthBook will encrypt the list of features returned in the API response.
-
-With encryption enabled, the response would be:
-
-```js
-  {
-    status: 200,
-    features: {},
-    encryptedFeatures: {
-      content: "encryptedFeatures",
-      iv: "initializationVector"
-    }
-  }
-```
-
-The features are encrypted with the AES-CBC algorithm via WebCrypto API's `SubtleCrypto` and the content inside (`features` and `iv`) are encoded as a `base64` string. An example of how to decrypt the feature list is below:
-
-```ts
-  function stringToBuffer(str: string): ArrayBuffer {
-    const buf = new ArrayBuffer(str.length);
-    const bufView = new Uint8Array(buf);
-    for (let i = 0, strLen = str.length; i < strLen; i++) {
-      bufView[i] = str.charCodeAt(i);
-    }
-    return buf;
-  }
-
-  // The encryption key is stored in the DB as a base64 encoded string, and needs to be converted to an ArrayBuffer before calling SubtleCrypto's importKey() method, which returns a CryptoKey that can be consumed by the decrypt() method.
-  async function getKeyFromString(keyString: string): Promise<CryptoKey> {
-    const binaryString = atob(keyString);
-    const buffer = stringToBuffer(binaryString);
-    return crypto.subtle.importKey(
-      "raw",
-      buffer,
-      {
-        name: "AES-CBC",
-      },
-      true,
-      ["encrypt", "decrypt"]
-    );
-  }
-
-  async function decryptFeatures({ features, iv }) {
-    // This can be found in your account under /settings/keys
-    const key = await getKeyFromString(
-      "o7AolAMiEgl9PvBS63O/pNDF8tvg9mxAt330FU71n9c="
-    );
-
-    // ciphertext and iv come in as base64 encoded strings and must be converted to ArrayBuffers
-    const ciphertext = stringToBuffer(atob(features));
-    iv = stringToBuffer(atob(iv));
-
-    const decryptedFeatures = await crypto.subtle.decrypt(
-      {
-        name: "AES-CBC",
-        iv,
-      },
-      key,
-      ciphertext
-    );
-    const decoder = new TextDecoder("utf8");
-    const decodedFeatures = decoder.decode(decryptedFeatures);
-    return decodedFeatures;
-  }
-
-useEffect(() => {
-  // Load feature definitions JSON from GrowthBook API
-  fetch("https://cdn.growthbook.io/api/features/<your api key>")
-    .then((res) => res.json())
-    .then(async (json) => {
-        growthbook.setFeatures(
-          JSON.parse(await decryptFeatures(json.encrpytedFeatures))
-        );
-      }
-    })
-    .catch(() => {
-      console.log("Failed to fetch GrowthBook feature definitions");
-    });
-}, [router.pathname]);
-```
-
-## Dev Mode
+### Dev Mode
 
 You can enable Dev Mode by passing `enableDevMode: true` when you create a new GrowthBook Context. Doing so will provide you with a much better developer experience when getting started.
 
