Docs minor edits (#676)
* Minor update of the markdown style for dropdown arrows and text changes.

--- a/docs/docs/index.mdx
+++ b/docs/docs/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: Introduction to GrowthBook
+title: GrowthBook Documentation
 sidebar_label: Overview
 id: introduction
 slug: /
@@ -8,7 +8,7 @@ hide_table_of_contents: true
 
 import ButtonCard from '@site/src/components/ButtonCard'
 
-# GrowthBook Docs
+# Introduction
 
 GrowthBook is an open-source platform for feature flagging and A/B testing built for data teams, engineers, and product managers.
 It's great whether you're looking to just analyze experiment results or looking to make it easier to deploy code.
