--- a/docs/docs/lib/index.mdx
+++ b/docs/docs/lib/index.mdx
@@ -14,6 +14,7 @@ We offer official SDKs in a few popular languages:
 - [Ruby](/lib/ruby)
 - [Python](/lib/python)
 - [Go](/lib/go)
+- [Java](/lib/java)
 - [Kotlin (Android)](/lib/kotlin)
 - [Swift](https://github.com/growthbook/growthbook-swift)
 - [Flutter](/lib/flutter)
