--- a/docs/src/partials/java/_code-tabs-add-dependency.mdx
+++ b/docs/src/partials/java/_code-tabs-add-dependency.mdx
@@ -3,7 +3,7 @@ import TabItem from '@theme/TabItem'
 
 ```mdx-code-block
 <Tabs>
-  <TabItem value="groovy" label="Groovy">
+  <TabItem value="gradle_groovy" label="Groovy">
 ```
 
 ```groovy title="build.gradle"
@@ -21,7 +21,7 @@ dependencies {
 ```mdx-code-block
 </TabItem>
 
-<TabItem value="kotlin" label="Kotlin">
+<TabItem value="gradle_kotlin" label="Kotlin">
 ```
 
 ```kotlin title="build.gradle.kts"
