--- a/docs/docs/lib/java.mdx
+++ b/docs/docs/lib/java.mdx
@@ -10,6 +10,8 @@ import ExternalLink from '@site/src/components/ExternalLink'
 import CodeTabsAddDependencyPartial from '@site/src/partials/java/_code-tabs-add-dependency.mdx'
 import CodeTabsGBContextBuilderPartial from '@site/src/partials/java/_code-tabs-gbcontext-builder.mdx'
 import CodeTabsGBContextStaticCreatePartial from '@site/src/partials/java/_code-tabs-gbcontext-static-create.mdx'
+import CodeTabsUsingFeaturesPartial from '@site/src/partials/java/_code-tabs-using-features.mdx'
+import CodeTabsTrackingCallbackPartial from '@site/src/partials/java/_code-tabs-tracking-callback.mdx'
 
 # Java
 
@@ -84,15 +86,55 @@ todo
 
 #### Attributes
 
-todo
+Attributes are a JSON string. You can specify attributes about the current user and request. Here's an example:
+
+```java
+// Java example
+String userAttributes = "{\"country\": \"canada\", \"id\": \"user-abc123\"}";
+```
+
+```kotlin
+// Kotlin example
+val userAttributes = """
+    {
+        "id": "user-abc123",
+        "country": "canada"
+    }
+""".trimIndent()
+```
+
+If you need to set or update attributes asynchronously, you can do so with `Context#attributesJson` or `GrowthBook#setAttributes`. This will completely overwrite the attributes object with whatever you pass in. Also, be aware that changing attributes may change the assigned feature values. This can be disorienting to users if not handled carefully.
 
 #### Tracking Callback
 
-todo
+Any time an experiment is run to determine the value of a feature, we call a function so you can record the assigned value in your event tracking or analytics system of choice.
+
+<CodeTabsTrackingCallbackPartial />
 
 ### Using Features
 
-todo
+Every feature has a "value" which is assigned to a user. This value can be any JSON data type. If a feature doesn't exist, the value will be `null`.
+
+There are 4 main methods for evaluating features:
+
+- **isOn()** - returns a boolean for a truthy value
+- **isOff()** - returns a boolean for a falsy value
+- **getFeatureValue()** - returns a generic value. Type is inferred based on the `defaultValue` argument provided.
+- **evalFeature()** - returns a feature result `FeatureResult<T>`. The value type needs to be specified in the generic parameter.
+
+<CodeTabsUsingFeaturesPartial />
+
+The `evalFeature` method returns a `FeatureResult<T>` object with more info about why the feature was assigned to the user. The `T` type corresponds to the value type of the feature.
+
+`FeatureResult<T>` It has the following getters:
+
+- **getValue()** - a nullable value of the feature
+- **getSource()** - a nullable enum for the source of the result. Why the value was assigned to the user
+- **getRuleId()** - a nullable string ID of the rule that was used to assign the value to the user
+- **getExperiment()** - a nullable experiment `Experiment<T>`, if the value resulted due to an experiment
+- **getExperimentResult()** - a nullable experiment result `ExperimentResult<T>`, if the value resulted due to an experiment
+
+As expected in Kotlin, you can access these getters using property accessors.
 
 ### Inline Experiments
 
