fix indentation; add Beta tag for java docs

--- a/docs/docs/lib/java.mdx
+++ b/docs/docs/lib/java.mdx
@@ -16,9 +16,13 @@ import CodeTabsRunExperimentPartial from '@site/src/partials/java/_code-tabs-run
 import CodeTabsExperimentResultCallbackPartial from '@site/src/partials/java/_code-tabs-subscribe-experiment-run.mdx'
 import CodeTabsExperimentResultSubscribeMultipleCallbackPartial from '@site/src/partials/java/_code-tabs-subscribe-multiple.mdx'
 
-# Java
-
 This supports Java applications using Java version 1.8 and higher.
+
+:::info Beta
+
+The GrowthBook Java SDK is currently in beta. If you experience any issues, let us know either on [Slack](https://slack.growthbook.io/) or [create an issue](https://github.com/growthbook/growthbook/issues/new/choose).
+
+:::
 
 ## Installation
 
