--- a/docs/docs/lib/java.mdx
+++ b/docs/docs/lib/java.mdx
@@ -120,24 +120,28 @@ Any time an experiment is run to determine the value of a feature, we may call t
 
 Every feature has a "value" which is assigned to a user. This value can be any JSON data type. If a feature doesn't exist, the value will be `null`.
 
-There are 4 main methods for evaluating features:
+There are 4 main methods for evaluating features.
 
-- **isOn()** - returns a boolean for a truthy value
-- **isOff()** - returns a boolean for a falsy value
-- **getFeatureValue()** - returns a generic value. Type is inferred based on the `defaultValue` argument provided.
-- **evalFeature()** - returns a feature result `FeatureResult<T>`. The value type needs to be specified in the generic parameter.
+| Method                        | Return type            | Description                                                                                                               |
+| ----------------------------- | ---------------------- | ------------------------------------------------------------------------------------------------------------------------- |
+| **`isOn(String)`**            | `Boolean`              | Returns true if the value is a truthy value                                                                               |
+| **`isOff(String)`**           | `Boolean`              | Returns true if the value is a falsy value                                                                                |
+| **`getFeatureValue(String)`** | generic `T` (nullable) | Returns the value cast to the generic type. Type is inferred based on the `defaultValue` argument provided.               |
+| **`evalFeature(String)`**     | `FeatureResult<T>`     | Returns a feature result with a value of generic type `T`. The value type needs to be specified in the generic parameter. |
 
 <CodeTabsUsingFeaturesPartial />
 
 The `evalFeature` method returns a `FeatureResult<T>` object with more info about why the feature was assigned to the user. The `T` type corresponds to the value type of the feature. In the above example, `T` is `Float`.
 
-`FeatureResult<T>` It has the following getters:
+`FeatureResult<T>` It has the following getters.
 
-- **getValue()** - a nullable value of the feature
-- **getSource()** - a nullable enum for the source of the result. Why the value was assigned to the user
-- **getRuleId()** - a nullable string ID of the rule that was used to assign the value to the user
-- **getExperiment()** - a nullable experiment `Experiment<T>`, if the value resulted due to an experiment
-- **getExperimentResult()** - a nullable experiment result `ExperimentResult<T>`, if the value resulted due to an experiment
+| Method                      | Return type                           | Description                                                                                  |
+| --------------------------- | ------------------------------------- | -------------------------------------------------------------------------------------------- |
+| **`getValue()`**            | generic `T` (nullable)                | The evaluated value of the feature                                                           |
+| **`getSource()`**           | `enum FeatureResultSource` (nullable) | The reason/source for the evaluated feature value.                                           |
+| **`getRuleId()`**           | `String` (nullable)                   | ID of the rule that was used to assign the value to the user.                                |
+| **`getExperiment()`**       | `Experiment<T>` (nullable)            | The experiment details, available only if the feature evaluates due to an experiment.        |
+| **`getExperimentResult()`** | `ExperimentResult<T>` (nullable)      | The experiment result details, available only if the feature evaluates due to an experiment. |
 
 As expected in Kotlin, you can access these getters using property accessors.
 
@@ -147,23 +151,21 @@ Instead of declaring all features up-front in the context and referencing them b
 
 <CodeTabsRunExperimentPartial />
 
-#### Inline experiment return value
+#### Inline experiment return value ExperimentResult
 
 An `ExperimentResult<T>` is returned where `T` is the generic value type for the experiment.
 
-There's also a number of methods available:
+There's also a number of methods available.
 
-- **getValue()** - a nullable value of the feature
-- **getVariationId()** - index of the variation used, if applicable
-- **getInExperiment()** - boolean if they were in the experiment
-- **getHashAttribute()** - attribute used for hashing, defaulting to `id`
-- **getHashValue()** - the hash value used for evaluating the experiment, if applicable
-- **getFeatureId()** - get the feature key
-- **getHashUsed()** - boolean if a hash was used to evaluate the experiment
-
-The `getInExperiment()` flag will be false if the user was excluded from being part of the experiment for any reason (e.g. failed targeting conditions).
-
-The `getHashUsed()` flag will only be true if the user was randomly assigned a variation. If the user was forced into a specific variation instead, this flag will be false.
+| Method                   | Return type            | Description                                                                                                                                                                                                  |
+| ------------------------ | ---------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
+| **`getValue()`**         | generic `T` (nullable) | The evaluated value of the feature                                                                                                                                                                           |
+| **`getVariationId()`**   | `Integer` (nullable)   | Index of the variation used, if applicable                                                                                                                                                                   |
+| **`getInExperiment()`**  | `Boolean`              | If the user was in the experiment. This will be false if the user was excluded from being part of the experiment for any reason (e.g. failed targeting conditions).                                          |
+| **`getHashAttribute()`** | `String`               | User attribute used for hashing, defaulting to `id` if not set.                                                                                                                                              |
+| **`getHashValue()`**     | `String` (nullable)    | The hash value used for evaluating the experiment, if applicable.                                                                                                                                            |
+| **`getFeatureId()`**     | `String`               | The feature key/ID                                                                                                                                                                                           |
+| **`getHashUsed()`**      | `Boolean`              | If a hash was used to evaluate the experiment. This flag will only be true if the user was randomly assigned a variation. If the user was forced into a specific variation instead, this flag will be false. |
 
 As expected in Kotlin, you can access these getters using property accessors.
 
@@ -179,7 +181,7 @@ You can subscribe with as many callbacks as you like:
 
 <CodeTabsExperimentResultSubscribeMultipleCallbackPartial />
 
-The experiment run callback is called for every experiment run, regardless of experiment result. If you would like to subscribe only to evaluations where the user falls into an experiment, see [TrackingCallback](#tracking-callback).
+**The experiment run callback is called for every experiment run, regardless of experiment result**. If you would like to subscribe only to evaluations where the user falls into an experiment, see [TrackingCallback](#tracking-callback).
 
 ## Code Examples
 
