--- a/docs/docs/lib/js.mdx
+++ b/docs/docs/lib/js.mdx
@@ -205,28 +205,13 @@ With encryption enabled, the response from the SDK Endpoint will be in the forma
 
 The features are encrypted using the AES-CBC algorithm. You can find your encryption key on the **Features -> Environments** page in GrowthBook.
 
-Here's an example of decrypting features using the SubtleCrypto api, which is built into all modern browsers:
+The JS SDK contains a built-in method `setEncryptedFeatures` that makes decrypting simple. Note: If you're in a NodeJS environment, you will need to pass in a SubtleCrpyto implementation as the 3rd argument when calling this method.
 
 ```ts
-// Helper function to decrypt using SubtleCrypto
-async function decrypt(encryptedText) {
-  const GB_ENCRYPTION_KEY = "MY_ENCRYPTION_KEY"; // <-- Set your encryption key here
-  const base64ToBuf = (b) => Uint8Array.from(atob(b), (c) => c.charCodeAt(0));
-  const key = await window.crypto.subtle.importKey(
-    "raw", base64ToBuf(GB_ENCRYPTION_KEY),
-    { name: "AES-CBC", length: 128 }, true, ["encrypt", "decrypt"]
-  );
-  const [iv, cipherText] = encryptedText.split(".");
-  const plainTextBuffer = await window.crypto.subtle
-    .decrypt({name: "AES-CBC", iv: base64ToBuf(iv)}, key, base64ToBuf(cipherText));
-  return new TextDecoder().decode(plainTextBuffer);
-}
-
 // Load features from the encrypted SDK Endpoint and decrypt them
 fetch("https://cdn.growthbook.io/api/features/<your api key>")
   .then((res) => res.json())
-  .then((json) => decrypt(json.encryptedFeatures))
-  .then((featuresStr) => growthbook.setFeatures(JSON.parse(featuresStr)))
+  .then((json) => growthbook.setEncryptedFeatures(json.encryptedFeatures, <your encryption key>));
   .catch((e) => console.log("Failed to set GrowthBook feature definitions", e));
 ```
 
