--- a/docs/docs/lib/js.mdx
+++ b/docs/docs/lib/js.mdx
@@ -205,13 +205,26 @@ With encryption enabled, the response from the SDK Endpoint will be in the forma
 
 The features are encrypted using the AES-CBC algorithm. You can find your encryption key on the **Features -> Environments** page in GrowthBook.
 
-The JS SDK contains a built-in method `setEncryptedFeatures` that makes decrypting simple. Note: If you're in a NodeJS environment, you will need to pass in a SubtleCrpyto implementation as the 3rd argument when calling this method.
+The JS SDK contains a built-in method `setEncryptedFeatures` that makes decrypting simple.
 
 ```ts
 // Load features from the encrypted SDK Endpoint and decrypt them
 fetch("https://cdn.growthbook.io/api/features/<your api key>")
   .then((res) => res.json())
   .then((json) => growthbook.setEncryptedFeatures(json.encryptedFeatures, <your encryption key>));
+  .catch((e) => console.log("Failed to set GrowthBook feature definitions", e));
+```
+
+**Note: If you're not in a browser environment (E.G Node, React Native), you will need to pass in a SubtleCrpyto implementation as the 3rd argument when calling `setEncryptedFeatures`. **
+
+```ts
+const { subtle } = require('node:crypto').webcrypto;
+
+growthbook.setEncryptedFeatures(encryptedString, encryptionKey, subtle);
+// Load features from the encrypted SDK Endpoint and decrypt them
+fetch("https://cdn.growthbook.io/api/features/<your api key>")
+  .then((res) => res.json())
+  .then((json) => growthbook.setEncryptedFeatures(json.encryptedFeatures, <your encryption key>, subtle));
   .catch((e) => console.log("Failed to set GrowthBook feature definitions", e));
 ```
 
