use green pill for "new" instead of "beta"

--- a/docs/docs/lib/java.mdx
+++ b/docs/docs/lib/java.mdx
@@ -19,9 +19,9 @@ import CodeTabsExperimentResultSubscribeMultipleCallbackPartial from '@site/src/
 
 This supports Java applications using Java version 1.8 and higher.
 
-:::info Beta
+:::success New
 
-The GrowthBook Java SDK is currently in beta. If you experience any issues, let us know either on [Slack](https://slack.growthbook.io/) or [create an issue](https://github.com/growthbook/growthbook/issues/new/choose).
+The GrowthBook Java SDK is a brand new feature. If you experience any issues, let us know either on [Slack](https://slack.growthbook.io/) or [create an issue](https://github.com/growthbook/growthbook/issues/new/choose).
 
 :::
 
