change the endpoint link from Settings to Environments

--- a/docs/docs/lib/java.mdx
+++ b/docs/docs/lib/java.mdx
@@ -95,7 +95,7 @@ For complete examples, see the [Examples](#examples) section below.
 
 #### Features
 
-The features JSON is equivalent to the `features` property that is returned from the SDK Endpoint for the specified environment. You can find your endpoint on the [Settings &rarr; API Keys page <ExternalLink/>](https://app.growthbook.io/settings/keys).
+The features JSON is equivalent to the `features` property that is returned from the SDK Endpoint for the specified environment. You can find your endpoint on the [Environments &rarr; SDK Endpoints page <ExternalLink/>](https://app.growthbook.io/environments).
 
 - You can read more [about features here](/app/features)
 - You can see an [example features JSON here <ExternalLink/>](https://github.com/growthbook/examples/blob/main/jvm-spring-web/src/main/resources/static/features.json)
