--- a/docs/src/partials/java/_code-tabs-gbcontext-constructor.mdx
+++ b/docs/src/partials/java/_code-tabs-gbcontext-constructor.mdx
@@ -7,7 +7,16 @@ import TabItem from '@theme/TabItem'
 ```
 
 ```java
-String featuresJson = featuresRepository.getFeaturesJson();
+// Fetch feature definitions from the GrowthBook API
+// We recommend adding a caching layer in production
+// Get your endpoint in the Environments tab -> SDK Endpoints: https://app.growthbook.io/environments
+URI featuresEndpoint = new URI("https://cdn.growthbook.io/api/features/<environment_key>");
+HttpRequest request = HttpRequest.newBuilder().uri(featuresEndpoint).GET().build();
+HttpResponse<String> response = HttpClient.newBuilder().build()
+    .send(request, HttpResponse.BodyHandlers.ofString());
+String featuresJson = new JSONObject(response.body()).get("features").toString();
+
+// JSON serializable user attributes
 String userAttributesJson = user.toJson();
 
 boolean isEnabled = true;
@@ -21,15 +30,18 @@ TrackingCallback trackingCallback = new TrackingCallback() {
     }
 };
 
+// Initialize the GrowthBook SDK with the GBContext
 GBContext context = new GBContext(
-    user.toJson(),
-    featuresRepository.getFeaturesJson(),
+    userAttributesJson,
+    featuresJson,
     isEnabled,
     isQaMode,
     url,
     forcedVariations,
     trackingCallback
 );
+
+GrowthBook growthBook = new GrowthBook(context);
 ```
 
 ```mdx-code-block
@@ -39,7 +51,16 @@ GBContext context = new GBContext(
 ```
 
 ```kotlin
-val featuresJson = featuresRepository.getFeaturesJson()
+// Fetch feature definitions from the GrowthBook API
+// We recommend adding a caching layer in production
+// Get your endpoint in the Environments tab -> SDK Endpoints: https://app.growthbook.io/environments
+val featuresEndpoint = URI.create("https://cdn.growthbook.io/api/features/<environment_key>")
+val request = HttpRequest.newBuilder().uri(featuresEndpoint).GET().build();
+val response = HttpClient.newBuilder().build()
+    .send(request, HttpResponse.BodyHandlers.ofString());
+val featuresJson = JSONObject(response.body()).get("features").toString()
+
+// JSON serializable user attributes
 val userAttributes = """
     {
         "id": "user-abc123",
@@ -60,6 +81,7 @@ val trackingCallback: TrackingCallback = object : TrackingCallback {
     }
 }
 
+// Initialize the GrowthBook SDK with the GBContext
 val context = GBContext(
     userAttributes,
     featuresJson,
@@ -69,6 +91,8 @@ val context = GBContext(
     forcedVariations,
     trackingCallback
 )
+
+val growthBook = GrowthBook(context)
 ```
 
 ```mdx-code-block
