Self PR review final tweaks to improve docs and removed unneeded disabled prop.

--- a/docs/docs/lib/js.mdx
+++ b/docs/docs/lib/js.mdx
@@ -205,7 +205,7 @@ With encryption enabled, the response from the SDK Endpoint will be in the forma
 
 The features are encrypted using the AES-CBC algorithm. You can find your encryption key on the **Features -> Environments** page in GrowthBook.
 
-The JS SDK contains a built-in method `setEncryptedFeatures` that makes decrypting simple.
+The JS SDK contains a built-in method `setEncryptedFeatures` that automatically decrypts the encryptedFeatures before calling `setFeatures`.
 
 ```ts
 // Load features from the encrypted SDK Endpoint and decrypt them
