--- a/docs/docs/lib/js.mdx
+++ b/docs/docs/lib/js.mdx
@@ -196,36 +196,34 @@ If you enable encryption for an SDK Endpoint, instead of returning features as h
 
 With encryption enabled, the response from the SDK Endpoint will be in the format:
 
-```js
+```json
   {
-    status: 200,
-    encryptedFeatures: "abcdef123456GHIJKL0987654321..."
+    "status": 200,
+    "encryptedFeatures": "abcdef123456GHIJKL0987654321..."
   }
 ```
 
-The features are encrypted using the AES-CBC algorithm. You can find your encryption key on the **Features -> Environments** page in GrowthBook.
-
-The JS SDK contains a built-in method `setEncryptedFeatures` that automatically decrypts the encryptedFeatures before calling `setFeatures`.
+The GrowthBook class has a `setEncryptedFeatures` helper method. You will need to pass in your encryption key, which you can find on the **Features -> Environments** page in GrowthBook.
 
 ```ts
 // Load features from the encrypted SDK Endpoint and decrypt them
 fetch("https://cdn.growthbook.io/api/features/<your api key>")
   .then((res) => res.json())
-  .then((json) => growthbook.setEncryptedFeatures(json.encryptedFeatures, <your encryption key>))
+  .then((json) => growthbook.setEncryptedFeatures(json.encryptedFeatures, "MY_ENCRYPTION_KEY"))
   .catch((e) => console.log("Failed to set GrowthBook feature definitions", e));
 ```
 
-**Note: If you're not in a browser environment (E.G Node, React Native), you will need to pass in a SubtleCrpyto implementation as the 3rd argument when calling `setEncryptedFeatures`. **
+**Note**: This method is not completely private. Users could find your encryption key if they inspect your minified javascript files.
+
+### Node.js
+
+If you're using this SDK in a Node.js environment using Node 18 or lower, you will need to pass in a SubtleCrpyto implementation as the 3rd argument when calling `setEncryptedFeatures`.
 
 ```ts
-const { subtle } = require('node:crypto').webcrypto;
+// Node 15+
+const crypto = require('node:crypto').webcrypto;
 
-growthbook.setEncryptedFeatures(encryptedString, encryptionKey, subtle);
-  // Load features from the encrypted SDK Endpoint and decrypt them
-  fetch("https://cdn.growthbook.io/api/features/<your api key>")
-    .then((res) => res.json())
-    .then((json) => growthbook.setEncryptedFeatures(json.encryptedFeatures, <your encryption key>, subtle))
-    .catch((e) => console.log("Failed to set GrowthBook feature definitions", e));
+growthbook.setEncryptedFeatures(encryptedString, encryptionKey, crypto.subtle);
 ```
 
 ## Inline Experiments
