--- a/docs/docs/tools/vscode-extension.mdx
+++ b/docs/docs/tools/vscode-extension.mdx
@@ -5,8 +5,10 @@ sidebar_label: Visual Studio Code Extension
 slug: vscode-extension
 ---
 
+import ExternalLink from '@site/src/components/ExternalLink'
+
 The GrowthBook Visual Studio Code extension allows you to see your available feature definitions right in VS Code.
 
 It can be configured to work with your project in under a minute and makes it easier for developers who use VS Code to work with the GrowthBook SDK by making features browsable and conveniently surfacing common actions.
 
-You [download it from the Visual Studio Marketplace](https://marketplace.visualstudio.com/items?itemName=GrowthBook.growthbook).
+You [download it from the Visual Studio Marketplace <ExternalLink />](https://marketplace.visualstudio.com/items?itemName=GrowthBook.growthbook).
